# ai-search-engine-benchmark

./: .gitignore  README.md  aggregate_results.py  ai_search_engine_benchmark.py  pyproject.toml  questions.yml
results/bard/: 438円.yml  OFF.yml  saippuakivikauppias.yml  『中二階』.yml  『恋文の技術』.yml  『狂人日記』.yml  さきぽんぽんぽんぽんぽんぽんぽん.yml  アラウトゥン.yml  エクアドル.yml  クリプトナイト.yml  サンゴーズダウン.yml  シンドローム.yml  トレンティーノ条約.yml  トンネル以外.yml  ナニコレ珍百景.yml  メジストン.yml  ヴェルニサージュ.yml  上海.yml  九等官.yml  即日帰郷.yml  啐啄同時.yml  喜撰法師.yml  坂井修一.yml  天の川銀河鉄道本線.yml  小学8年生.yml  枕.yml  烏八臼.yml  空.yml  零年.yml  駒が載っていないマス.yml
results/chatgpt_gpt35/: 438円.yml  OFF.yml  saippuakivikauppias.yml  『中二階』.yml  『恋文の技術』.yml  『狂人日記』.yml  さきぽんぽんぽんぽんぽんぽんぽん.yml  アラウトゥン.yml  エクアドル.yml  クリプトナイト.yml  サンゴーズダウン.yml  シンドローム.yml  トレンティーノ条約.yml  トンネル以外.yml  ナニコレ珍百景.yml  メジストン.yml  ヴェルニサージュ.yml  上海.yml  九等官.yml  即日帰郷.yml  啐啄同時.yml  喜撰法師.yml  坂井修一.yml  天の川銀河鉄道本線.yml  小学8年生.yml  枕.yml  烏八臼.yml  空.yml  零年.yml  駒が載っていないマス.yml
results/chatgpt_gpt4_browsing/: 438円.yml  OFF.yml  saippuakivikauppias.yml  『中二階』.yml  『恋文の技術』.yml  『狂人日記』.yml  さきぽんぽんぽんぽんぽんぽんぽん.yml  アラウトゥン.yml  エクアドル.yml  クリプトナイト.yml  サンゴーズダウン.yml  シンドローム.yml  トレンティーノ条約.yml  トンネル以外.yml  ナニコレ珍百景.yml  メジストン.yml  ヴェルニサージュ.yml  上海.yml  九等官.yml  即日帰郷.yml  啐啄同時.yml  喜撰法師.yml  坂井修一.yml  天の川銀河鉄道本線.yml  小学8年生.yml  枕.yml  烏八臼.yml  空.yml  零年.yml  駒が載っていないマス.yml
results/edge_creative/: 438円.yml  OFF.yml  saippuakivikauppias.yml  『中二階』.yml  『恋文の技術』.yml  『狂人日記』.yml  さきぽんぽんぽんぽんぽんぽんぽん.yml  アラウトゥン.yml  エクアドル.yml  クリプトナイト.yml  サンゴーズダウン.yml  シンドローム.yml  トレンティーノ条約.yml  トンネル以外.yml  ナニコレ珍百景.yml  上海.yml  (+14 more)
(+30 files in other folders)
